# CSD2D-plugin

./: .gitignore  CMakeLists.txt  README.md  notes.md
.github/workflows/: action.yml  build.yml
source/: DistrhoPluginInfo.h  SvEArtworkChorus.hpp  arctangentDistortion.cpp  arctangentDistortion.hpp  chorus.cpp  chorus.hpp  chorusUI.cpp  chorusUI.hpp  circularBuffer.cpp  circularBuffer.hpp  oscillator.cpp  oscillator.hpp
